# GraphNeuralNetworks

./: .gitignore  README.md  Solvents.txt  pyproject.toml
GraphVisualization/: graph.js  graphData.json  graph_.js  graphhtml.html  testgraph.html  testjs.html
src/: GNN.py  GNNLayer.py  GNNLayerTest.ipynb  GNNTest.ipynb
src/Graphs/: Graphs.py  Graphs_test.py  SMILEStoGraph.py  SMILEStoGraphTest.ipynb  geoGraphs.py
src/Graphs/graph_viz/: graph.js  graphData.json  graph_viz.html
src/Graphs/molecule_viz/: graph.js  graphData.json
